--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Required Vars
 
-API_ID=123456
-API_HASH=dagsjdhgjfsahgjfh
-BOT_TOKENS=21413535:gkdshajfhjfakhjf
-STORAGE_CHANNEL=-100123456789
-DATABASE_BACKUP_MSG_ID=123
+API_ID=13061692
+API_HASH=63d4032b585a09a50c5dcd162fc784e8
+BOT_TOKENS=5770669200:AAF8soDGICD2y9zf_5G2Fv7Ct19Udr6OA3w
+STORAGE_CHANNEL=2061662916
+DATABASE_BACKUP_MSG_ID=185
